# qtask-client-py

./: .env.development  .env.example  README.md  pyproject.toml  requirements.txt
examples/: api.py  basic.py  config.py
qtask_client/: __init__.py  api_client.py  client.py  consumer_worker.py
