[project]
name = "qtask-client-py"
version = "0.2.0" # Consider incrementing version after major refactor
dependencies = [
    "httpx",                     # Replaced requests with httpx for async HTTP
    "redis>=4.2",                # Ensure redis version supports asyncio
    # Add other dependencies your library might have below
    # e.g., "pydantic" if used for models, etc.
]
# Optional: Specify Python version
# python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Optional: Add project metadata (URLs, author, etc.)
# [project.urls]
# Homepage = "https://github.com/yourusername/qtask-client-py"
# Bug-Tracker = "https://github.com/yourusername/qtask-client-py/issues"

# [project.optional-dependencies]
# hiredis = ["redis[hiredis]>=4.2"] # Example: Optional faster parser